--- a/Settings/preamble.tex
+++ b/Settings/preamble.tex
@@ -73,8 +73,8 @@
 \fancyfoot[L]{}
 \fancyfoot[C]{}
 \fancyfoot[R]{Page \thepage\ of~\pageref{LastPage}}
-\fancyhead[L]{Kasper~Holck}
-\fancyhead[C]{AUID:~698242}
+\fancyhead[L]{Andreas~Pedersen}
+\fancyhead[C]{AUID:~666333}
 \fancyhead[R]{\today}
 
 %\renewcommand{\headrulewidth}{0pt} % Removes line under header.
