change images to imgs

--- a/Settings/preamble.tex
+++ b/Settings/preamble.tex
@@ -36,7 +36,7 @@
 \input{Settings/functions.tex} % Import some custom settings
 
 \usepackage{graphicx} % For including graphics
-\graphicspath{{images/}} % Sets the default location of pictures
+\graphicspath{{imgs/}} % Sets the default location of pictures
 
 \usepackage{blindtext} % For generating dummy text
 
