--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -1,10 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
-\graphicspath{{\subfix{../images/}}}
+\graphicspath{{\subfix{../imgs/}}}
 
 \begin{document}
 
-\section{Section 1 title}
+\section{Operational Transconductance Amplifier}
 
 \blindtext\\
 
