--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -7,11 +7,35 @@
 \pagenumbering{gobble} % Disable page numbering
 
 \begin{titlepage}
-    
-    {\Large Bachelor's Thesis in Electrical Engineering}
-    \vfill
+    \begin{center}
+        
+        \vspace*{1cm}
 
-    {\Large \today\par} % Including the current date
+        \textbf{\large{EEG Recording Front-End}}
+
+        \vspace{0.5cm}
+        Design and Simulation of a Low-Noise, Low-Power, High-Input-Impedance EEG Front-End in 65nm CMOS Technology
+
+        \vspace{1.5cm}
+
+        \textbf{Andreas S. Pedersen}
+
+        \vfill
+
+        A thesis presented for the degree of\\
+        \textit{Bachelor of Science}
+
+        \vspace{0.8cm}
+        
+        \includegraphics[width=0.4\textwidth]{au_logo.png}
+
+        \vspace*{1cm}
+
+        Department of ECE\\
+        Aarhus University\\
+        Denmark\\
+        \today
+    \end{center}
 \end{titlepage}
 
 \end{document}
