initial document setup

--- a/Settings/preamble.tex
+++ b/Settings/preamble.tex
@@ -40,8 +40,6 @@
 
 \usepackage{blindtext} % For generating dummy text
 
-\usepackage{subfiles} % Best loaded last in the preamb\xi le
-
 \usepackage{changepage} % For changing the page margins
 
 %%% Circuit drawing packages:
@@ -55,6 +53,10 @@
 \usepackage{multicol} % For making multiple columns
 
 \usepackage{amsmath}  % For making math
+
+\usepackage{siunitx}
+
+\usepackage{subfiles} % Best loaded last in the preamb\xi le
 
 \usepackage[hidelinks]{hyperref} % make hyperlinks for sections
 \hypersetup{
