--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -6,8 +6,24 @@
 
 \section{Abstract}
 
-\blindtext\\
+In recent years, there has been a growing interest in developing systems that can continuously
+monitor biomedical signals for healthcare and lifestyle applications. This interest has been
+driven by significant advancements in technologies used to measure signals like EEG, ECG,
+and EMG. \vspace*{10pt}
 
-\noindent \textbf{Keywords:}
+For instance, EEG is a method used for diagnosing epilepsy and is also commonly used in
+Brain-Computer Interfaces (BCI). However, EEG signals are quite weak, with very low strength
+and slow frequencies (i.e., $10-100 \si{\mu V}$ and $0.5-50\si{Hz}$). This makes EEG signals easily influenced
+by external noise and unwanted artifacts, such as those caused by eye movements, heart
+activity, and muscle contractions. Additionally, it's important for these monitoring systems to
+have low power consumption to ensure longer battery life for continuous signal recording. \vspace*{10pt}
+
+This project aims to design and implement a low noise amplifier and a low-pass filter for an
+EEG analog front-end in a 65nm CMOS technology with a primary emphasis on minimizing
+input-referred noise and power consumption. For EEG recordings, these two blocks are critical
+components of the analog front-end, which must align with the demands of bandwidth, noise,
+and power consumption. \vspace*{10pt}
+
+\noindent \textbf{Keywords: CMOS, EEG, LNA, Analog Front-End, Low Power, Low Noise, 65nm Technology.}
 
 \end{document}
