--- a/sections/dedication.tex
+++ b/sections/dedication.tex
@@ -8,7 +8,7 @@
 
 \vspace*{\fill}
 \begin{center}
-    Page left blank intentionally
+    THIS PAGE LEFT INTENTIONALLY BLANK
 \end{center}
 
 \end{document}
