--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -4,20 +4,14 @@
 
 \begin{document}
 
-\section{Operational Transconductance Amplifier}
+\section{Virtuoso and the Analog Workflow}
 
-\blindtext\\
+\subsection{Nanometer Design Challenges}
 
-\blindtext\\
+\subsection{The $g_m$/$I_D$ Method}
 
-\noindent Example miscellaneous citation: \cite{Author}\\
 
-\noindent Example article citation: \cite{einstein}\\
 
-\noindent Notice that the citation numbering will be in the same
-order as the inclusions in Settings/References.tex\\
 
-\noindent Articles are numbered \emph{before} Miscellaneous therefore the
-first citation will be numbered 2 and the next 1.
 
 \end{document}
