--- a/sections/section02.tex
+++ b/sections/section02.tex
@@ -4,10 +4,17 @@
 
 \begin{document}
 
-\section{Section 2 title}
+\section{Operational Transconductance Amplifier}
 
-\blindtext\\
+\subsection{Introduction}
 
-\blindtext
+\subsection{Analysis}
+
+\subsection{Sizing}
+
+\subsection{Simulation}
+
+\subsection{Conclusion}
+
 
 \end{document}
