--- a/Settings/bibliography.bib
+++ b/Settings/bibliography.bib
@@ -1,22 +1,25 @@
-%-------------------------------------------------------------------
-%                       Articles
-%-------------------------------------------------------------------
-@article{einstein,
-  author   = {Albert Einstein},
-  title    = {{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-              [{On} the electrodynamics of moving bodies]},
-  journal  = {Annalen der Physik},
-  volume   = {322},
-  number   = {10},
-  pages    = {891--921},
-  year     = {1905},
-  doi      = {10.1002/andp.19053221004},
-  keywords = {physics}
+%   ---   articles   ---   %
+@article{harrison,
+  author   = {Reid Harrison},
+  title    = {A Low-Power, Low-Noise CMOS Amplifier for Neural Recording Applications},
+  journal  = {IEEE Journal of Solid-State Circuits},
+  volume   = {38},
+  number   = {6},
+  pages    = {958-965},
+  year     = {2003},
+  doi      = {10.1109/JSSC.2003.811979},
 }
 
-%-------------------------------------------------------------------
-%                       Books
-%-------------------------------------------------------------------
+@article{hossein,
+  author   = {Hossein Kassiri},
+  title    = {Low-Distortion super-GOhm subthreshold-MOS resistors for CMOS neural amplifiers},
+  journal  = {IEEE Biomedical Circuits and Systems Conference (BioCAS)},
+  year     = {2013},
+  doi      = {10.1109/BioCAS.2013.6679691},
+}
+
+%   ---    books    ---   %
+
 @book{dirac,
   title     = {The Principles of Quantum Mechanics},
   author    = {Paul Adrien Maurice Dirac},
