--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -1,8 +1,6 @@
 \documentclass[../main.tex]{subfiles}
 
 \graphicspath{{\subfix{../imgs/}}}
-\usepackage{subcaption}
-\usepackage{float}
 
 \begin{document}
 
@@ -73,6 +71,10 @@ The $g_m/I_D$ depends entirely on the accuracy of the MOS models from the PDK. W
     \end{subfigure}
     \caption{$g_m/I_D$ versus $g_m r_O$}
 \end{figure}
+
+\pagebreak
+
+
 
 
 
