--- a/sections/section03.tex
+++ b/sections/section03.tex
@@ -4,6 +4,8 @@
 
 \begin{document}
 
-\section{Section 3 title}
+\section{Pseudo Resistors}
+
+In this section we will explore the design and performance of pseudo resistors \cite{hossein}.
 
 \end{document}
