--- a/Settings/preamble.tex
+++ b/Settings/preamble.tex
@@ -56,6 +56,10 @@
 
 \usepackage{siunitx}
 
+\usepackage{subcaption} % for subfigures
+
+\usepackage{float} % for [H]
+
 \usepackage{subfiles} % Best loaded last in the preamb\xi le
 
 \usepackage[hidelinks]{hyperref} % make hyperlinks for sections
@@ -76,7 +80,7 @@
 \fancyfoot[C]{}
 \fancyfoot[R]{Page \thepage\ of~\pageref{LastPage}}
 \fancyhead[L]{Andreas~Pedersen}
-\fancyhead[C]{AUID:~666333}
+\fancyhead[C]{Aarhus University}
 \fancyhead[R]{\today}
 
 %\renewcommand{\headrulewidth}{0pt} % Removes line under header.
